--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.5.4",
     "mqtt": "^5.10.0",
