--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.5.4",
     "mqtt": "^5.10.0",
