--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://devanandk:NDKNiMNfAYHkemiX@clusterreflow.66omo.mongodb.net/
+MONGODB_URI=mongodb+srv://devanandpvt04:Ysdg0l3ELYu6g3ei@reflowcluster.8yfxr.mongodb.net/
