--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.5",
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "mqtt": "^5.10.0",
     "next": "14.2.5",
