--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "mongoose": "^8.5.4",
     "mqtt": "^5.10.0",
     "next": "14.2.5",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
