chore: add connection data to env

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,10 @@
+# MongoDB Connection String
 MONGODB_URI="mongodb+srv://devanandpvt04:Ysdg0l3ELYu6g3ei@reflowcluster.8yfxr.mongodb.net/?retryWrites=true&w=majority&appName=reflowCluster"
+
+# PostgreSQL Connection
+POSTGRES_HOST="54.89.106.185"
+POSTGRES_PORT=5432
+POSTGRES_USER="reflow"
+POSTGRES_PASSWORD="rfcc1234"
+POSTGRES_DB="ax3_db"
+
