--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.5.4",
     "mqtt": "^5.10.0",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18"
