--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "pg": "^8.12.0",
+    "prop-types": "^15.8.1",
     "react": "^18",
+    "react-csv": "^2.2.2",
     "react-dom": "^18"
   },
   "devDependencies": {
