--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "mqtt": "^5.10.0",
-    "next": "14.2.5",
+    "next": "^14.2.12",
     "next-auth": "^5.0.0-beta.20",
     "pg": "^8.12.0",
     "prop-types": "^15.8.1",
