--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-csv": "^2.2.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "reflow-web": "file:"
   },
   "devDependencies": {
     "@types/pg": "^8.11.8",
