--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.7.5",
     "dotenv": "^16.4.5",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "mqtt": "^5.10.0",
